# line_follower_rover

./: README.md  package.xml
rover/: CMakeLists.txt
rover/launch/: gazebo.launch
rover/src/: motor_controller.cpp  move_controller.cpp  p_controller.cpp  planner.py
rover/urdf/: camera.xacro  robot.urdf.xacro  wheel.xacro
rover/world/: map.world
src/: motor_controller.cpp
urdf/: robot.urdf.xacro
